# streamrs

./: .gitignore  Cargo.toml  LICENSE  Makefile  Readme.md  development.md
.github/workflows/: deb-release.yml
config/: default.toml  lv.apps.streamrs.desktop  lv.apps.streamrs.metainfo.xml
po/: LINGUAS  en.po  lv.po  streamrs.pot
scripts/: build-deb.sh  build-translations.sh  extract-gettext.sh  mock_preview.py  notes.md  update-po.sh
src/: lib.rs  main.rs  paging.rs  paths.rs  process.rs  streamdeck.rs
src/cli/: preview.rs
src/config/: current_profile.rs  mod.rs  preview.rs  streamrs.rs  streamrs_profile.rs  streamrs_schema.rs  toml.rs
src/gui/: core.rs  main.rs  ui.rs
src/gui/core/: config_io.rs  deck_layout.rs  editor.rs  i18n.rs  icon_cache.rs  icon_catalog.rs  paging.rs  prelude.rs  style.rs
src/gui/ui/: signal_wiring.rs
src/gui/ui/signals/: clock.rs  editor.rs  finalize.rs  management.rs  mod.rs  navigation.rs  primary_actions.rs
src/icon-compose/: main.rs
src/image/: cache_fs.rs  calendar.rs  catalog.rs  clock.rs  effects.rs  mod.rs  streamrs.rs  svg.rs
src/init/: streamrs.rs
src/main/: main.rs  tests.rs
src/preview/: main.rs
systemd/: streamrs.service
