[package]
name = "streamrs"
version = "0.4.2"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.9.1" }
chrono = "0.4.44"
gtk = { package = "gtk4", version = "0.11.0" }
hidapi = "2.6.4"
image = "0.25.9"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[profile.release]
strip = true
